manifests/cert-manager/netpol-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-controller
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "9403"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: "acme-v02.api.letsencrypt.org"
        - matchName: "api.cloudflare.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # ACME DNS-01 propagation check: queries authoritative nameservers directly
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
